--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" style="margin: 0px;">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -21,7 +22,7 @@
         <div class="head_nav">
             <ul>
                 <li>
-                    <a href="/home/index/index.html">主页</a>
+                    <a href="javascript:;" onclick="home()">主页</a>
                 </li>
                 <li>
                     <a href="/home/choose/index.html">个人中心</a>
@@ -78,48 +79,6 @@
     </div>
 </div>
 </body>
-<script type="text/javascript">
-    var browserVersion = window.navigator.userAgent.toUpperCase();
-    var isOpera = browserVersion.indexOf("OPERA") > -1 ? true : false;
-    var isFireFox = browserVersion.indexOf("FIREFOX") > -1 ? true : false;
-    var isChrome = browserVersion.indexOf("CHROME") > -1 ? true : false;
-    var isSafari = browserVersion.indexOf("SAFARI") > -1 ? true : false;
-    var isIE = (!!window.ActiveXObject || "ActiveXObject" in window);
-    var isIE9More = (! -[1, ] == false);
-    function reinitIframe(iframeId, minHeight) {
-        try {
-            var iframe = document.getElementById(iframeId);
-            var bHeight = 0;
-            if (isChrome == false && isSafari == false)
-                bHeight = iframe.contentWindow.document.body.scrollHeight;
-
-            var dHeight = 0;
-            if (isFireFox == true)
-                dHeight = iframe.contentWindow.document.documentElement.offsetHeight + 2;
-            else if (isIE == false && isOpera == false)
-                dHeight = iframe.contentWindow.document.documentElement.scrollHeight;
-            else if (isIE == true && isIE9More) {//ie9+
-                var heightDeviation = bHeight - eval("window.IE9MoreRealHeight" + iframeId);
-                if (heightDeviation == 0) {
-                    bHeight += 3;
-                } else if (heightDeviation != 3) {
-                    eval("window.IE9MoreRealHeight" + iframeId + "=" + bHeight);
-                    bHeight += 3;
-                }
-            }
-            else//ie[6-8]、OPERA
-                bHeight += 3;
-
-            var height = Math.max(bHeight, dHeight);
-            if (height < minHeight) height = minHeight;
-            iframe.style.height = height + "px";
-        } catch (ex) { }
-    }
-    function startInit(iframeId, minHeight) {
-        eval("window.IE9MoreRealHeight" + iframeId + "=0");
-        window.setInterval("reinitIframe('" + iframeId + "'," + minHeight + ")", 100);
-    }
-    startInit('mainFrame', 560);
-</script>
+<script type="text/javascript" src="/www/home/js/index.js"></script>
 </html>
 
