--- a/web/index.html
+++ b/web/index.html
@@ -51,7 +51,7 @@
     </div>
 </div>
 <iframe src="/www/registered/index.html" id="mainFrame" name="mainFrame" frameborder="0" style="padding: 0px; width: 100%; height: 100%;" scrolling="no"></iframe>
-<div class="footer">
+<div class="footer" id="footer" style="display: none">
     <div class="foot-content">
         <div class="foot-content2">
             <div class="foot-content3">
