--- a/web/index.html
+++ b/web/index.html
@@ -41,16 +41,16 @@
         <div class="head_login" style="background: #27303f;">
             <ul class="login_nav">
                 <li>
-                    <a href="/home/index/login.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> 登录</a>
+                    <a href="login/index.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> 登录</a>
                 </li>
                 <li>
-                    <a href="/home/index//register.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 注册</a>
+                    <a href="home/index.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 注册</a>
                 </li>
             </ul>
         </div>
     </div>
 </div>
-<iframe src="/www/registered/index.html" id="mainFrame" name="mainFrame" frameborder="0" style="padding: 0px; width: 100%; height: 100%;" scrolling="no"></iframe>
+<iframe src="home/index.html" id="mainFrame" name="mainFrame" frameborder="0" style="padding: 0px; width: 100%; height: 100%;" scrolling="no"></iframe>
 <div class="footer" id="footer" style="display: none">
     <div class="foot-content">
         <div class="foot-content2">
