--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
 <div id="header" class="header">
     <div class="head_center">
         <div class="login">
-            <a><img src="http://www.zhiliaoliao.com/Public/home_img/logo.png" alt="知了了网络"></a>
+            <a><img src="home/icon/logo.jpg" alt="知了了网络"></a>
         </div>
         <div class="head_nav">
             <ul>
