--- a/web/home/index.html
+++ b/web/home/index.html
@@ -28,6 +28,7 @@
     .p {
         text-align: center;
     }
+
 </style>
 <body style="background: #ffebeb">
 <div class="container" id = "width">
@@ -42,15 +43,52 @@
                             <div id="def-html" class="box" data-tooltip="#html-content">
                                 <img src="https://pbs.twimg.com/media/CthYHkzXEAQw7qE.jpg" height="28" width="28" id="abcd" data-toggle="tooltip" data-placement="top">
                             </div>
-                            <div id="html-content" style="display:none;>
-                                <div style="width: 200px;height: 200px;">
-                                    <img src="https://pbs.twimg.com/media/CthYHkzXEAQw7qE.jpg" height="70" width="70">
+                            <div id="html-content" style="display:none;">
+                                <div style="width:290px;height: 232px; background: #ffffff;">
+                                    <div style="width: 290px;height: 90px;">
+                                        <img src="https://pbs.twimg.com/profile_banners/740219796/1471995452/600x200" width="290px;" height="90px;">
+                                    </div>
+                                    <div style="width: 72px;height: 72px;left: 12px;top: 60px;position:absolute;">
+                                        <img src="https://pbs.twimg.com/profile_images/768230710163320837/dF5n16wL_bigger.jpg" width="72px;" height="72px;">
+                                    </div>
+                                    <div style="width: 190px;height: 72px;left: 72px;top: 95px;position:absolute;">
+                                        <p style="font-size: 18px;color: #292f33;font-weight: 700;">Marvel Entertainment</p>
+                                    </div>
+                                    <div style="width: 20px;height: 72px;left: 262px;top: 100px;position:absolute;">
+                                        <button type="button" class="btn btn-default btn-sm">
+                                            <span class="glyphicon glyphicon-user"></span>
+                                        </button>
+                                    </div>
+                                    <div style="width:290px;height: 50px;left: 12px;top: 140px;position:absolute;">
+                                        <p style="font-size: 12px;line-height:15px; color: #292f33;">
+                                            Where the conversation begins. Follow for breaking news, special reports, RTs of our journalists and more from http://NYTimes.com .
+                                        </p>
+                                    </div>
+
+                                    <div style="width:279px;height: 53px;top: 190px;position:absolute; padding-bottom: 10px;padding-left: 10px;padding-top: 10px;">
+                                        <div style="width: 80px;float: left">
+                                            <p style="font-size: 13px;color:#8899a6; text-align:center">
+                                                guanzhu</br><span style="color:#1b95e0;font-size: 18px">256</span>
+                                            </p>
+                                        </div>
+                                        <div style="width: 80px;float: left">
+                                            <p style="font-size: 13px;color:#8899a6; text-align:center">
+                                                guanzhu</br><span style="color:#1b95e0;font-size: 18px">256</span>
+                                            </p>
+                                        </div>
+                                        <div style="width: 80px;float: left">
+                                            <p style="font-size: 13px;color:#8899a6; text-align:center">
+                                                guanzhu</br><span style="color:#1b95e0;font-size: 18px">256</span>
+                                            </p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            </p>
                         </div>
                         <div style="float: left;width: 200px">
-                            <p style="color: #292f33; font-weight:bold">Marvel Entertainment</p>
+                            <div class="box" data-tooltip="#html-content">
+                                <p style="color: #292f33; font-weight:bold">Marvel Entertainment</p>
+                            </div>
                         </div>
                         <div style="float: right;width: 80px;font-size: 13px;color:#8899a6; text-align:right">
                             <p id="abc" data-toggle="tooltip" data-placement="top" title="2013年9月12日 12:56">120小时</p>
@@ -127,9 +165,13 @@
 
 <script type="text/javascript" >
     $("[data-toggle='tooltip']").tooltip();
-    $('#def-html').darkTooltip({
+    $('*').darkTooltip({
 
     });
+    /*$('#def-html1').darkTooltip({
+
+    });*/
+
     (function( $ ) {
        /* var tooltip = $('<div>This will be the tooltip text. It even has an onclick event!</div>');
         $('#abcd').data('powertip', tooltip);
