--- a/web/home/index.html
+++ b/web/home/index.html
@@ -4,8 +4,6 @@
     <title></title>
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
-    <!-- 可选的Bootstrap主题文件（一般不用引入） -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
     <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
@@ -38,10 +36,10 @@
             <div class="thumbnail">
                 <img src="https://pbs.twimg.com/media/CthYHkzXEAQw7qE.jpg" alt="">
                 <div class="caption">
-                    <div style="width: auto;height: 30px;">
-                        <div style="width: 30px; float: left">
+                    <div style="width: auto;height: 35px;">
+                        <div style="width: 35px; float: left">
                             <div id="def-html" class="box" data-tooltip="#html-content">
-                                <img src="https://pbs.twimg.com/media/CthYHkzXEAQw7qE.jpg" height="28" width="28" id="abcd" data-toggle="tooltip" data-placement="top">
+                                <img src="https://pbs.twimg.com/media/CthYHkzXEAQw7qE.jpg" height="35" width="35" id="abcd" data-toggle="tooltip" data-placement="top">
                             </div>
                             <div id="html-content" style="display:none;">
                                 <div style="width:290px;height: 232px; background: #ffffff;">
@@ -51,12 +49,15 @@
                                     <div style="width: 72px;height: 72px;left: 12px;top: 60px;position:absolute;">
                                         <img src="https://pbs.twimg.com/profile_images/768230710163320837/dF5n16wL_bigger.jpg" width="72px;" height="72px;">
                                     </div>
-                                    <div style="width: 190px;height: 72px;left: 72px;top: 95px;position:absolute;">
-                                        <p style="font-size: 18px;color: #292f33;font-weight: 700;">Marvel Entertainment</p>
+                                    <div style="width: 185px;height: 72px;left: 80px;top: 95px;position:absolute;">
+                                        <p>
+                                            <span style="font-size: 16px;color: #292f33;font-weight: 700;">Marvel Entertainment</span></br>
+                                            <span style="font-size: 11px;line-height:15px;color:#8899a6;">西南民族大学</span>
+                                        </p>
                                     </div>
-                                    <div style="width: 20px;height: 72px;left: 262px;top: 100px;position:absolute;">
+                                    <div style="width: 20px;height: 72px;left: 257px;top: 100px;position:absolute;">
                                         <button type="button" class="btn btn-default btn-sm">
-                                            <span class="glyphicon glyphicon-user"></span>
+                                            <span class="glyphicon glyphicon-user"></span>+
                                         </button>
                                     </div>
                                     <div style="width:290px;height: 50px;left: 12px;top: 140px;position:absolute;">
@@ -68,37 +69,70 @@
                                     <div style="width:279px;height: 53px;top: 190px;position:absolute; padding-bottom: 10px;padding-left: 10px;padding-top: 10px;">
                                         <div style="width: 80px;float: left">
                                             <p style="font-size: 13px;color:#8899a6; text-align:center">
-                                                guanzhu</br><span style="color:#1b95e0;font-size: 18px">256</span>
+                                                动态</br><span style="color:#1b95e0;font-size: 18px">256</span>
                                             </p>
                                         </div>
                                         <div style="width: 80px;float: left">
                                             <p style="font-size: 13px;color:#8899a6; text-align:center">
-                                                guanzhu</br><span style="color:#1b95e0;font-size: 18px">256</span>
+                                                正在关注</br><span style="color:#1b95e0;font-size: 18px">256</span>
                                             </p>
                                         </div>
                                         <div style="width: 80px;float: left">
                                             <p style="font-size: 13px;color:#8899a6; text-align:center">
-                                                guanzhu</br><span style="color:#1b95e0;font-size: 18px">256</span>
+                                                关注者</br><span style="color:#1b95e0;font-size: 18px">256</span>
                                             </p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div style="float: left;width: 200px">
+                        <div style="float: left;width: 200px;padding-left: 5px;">
                             <div class="box" data-tooltip="#html-content">
+<!--
                                 <p style="color: #292f33; font-weight:bold">Marvel Entertainment</p>
+-->
+                                <p>
+                                    <span style="color: #292f33; font-weight:bold">Marvel Entertainment</span></br>
+                                </p>
+                                <p style="line-height: 0px;">
+                                    <span style="font-size: 5px;color:#8899a6;">西南民族大学</span>
+                                </p>
                             </div>
                         </div>
                         <div style="float: right;width: 80px;font-size: 13px;color:#8899a6; text-align:right">
-                            <p id="abc" data-toggle="tooltip" data-placement="top" title="2013年9月12日 12:56">120小时</p>
+                            <p id="ab4c" data-toggle="tooltip" data-placement="top" title="2013年9月12日 12:56">120小时</p>
                         </div>
                     </div>
-                    <p style="margin-top: 10px; word-wrap:break-word">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, illum voluptates consectetur consequatur ducimus. Necessitatibus, nobis consequatur hic eaque laborum laudantium. Adipisci, explicabo, asperiores molestias deleniti unde dolore enim quas.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, illum voluptates consectetur consequatur ducimus. Necessitatibus, nobis consequatur hic eaque laborum laudantium. Adipisci, explicabo, asperiores molestias deleniti unde dolore enim quas.
-                    </p>
-
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12">
+                            <p style="margin-top: 10px; word-wrap:break-word">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, illum voluptates consectetur consequatur ducimus. Necessitatibus, nobis consequatur hic eaque laborum laudantium. Adipisci, explicabo, asperiores molestias deleniti unde dolore enim quas.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, illum voluptates consectetur consequatur ducimus. Necessitatibus, nobis consequatur hic eaque laborum laudantium. Adipisci, explicabo, asperiores molestias deleniti unde dolore enim quas.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <p data-toggle="tooltip" data-placement="top" title="喜欢" style="text-align:center">
+                                <span class="glyphicon glyphicon-heart" style="color: #ff0000;"></span><span style="padding-left: 6px;">50</span>
+                            </p>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <p data-toggle="tooltip" data-placement="top" title="回复" style="text-align:center">
+                                <span class="glyphicon glyphicon-share-alt" style="color: #ff0000"></span>
+                            </p>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <p data-toggle="tooltip" data-placement="top" title="转发" style="text-align:center">
+                                <span class="glyphicon glyphicon-retweet" style="color: #ff0000"></span><span style="padding-left: 6px;">80</span>
+                            </p>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <p data-toggle="tooltip" data-placement="top" title="举报" style="text-align:center">
+                                <span class="glyphicon glyphicon-user" style="color: #ff0000"></span><span style="padding-left: 6px;">5</span>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div><!--/.item  -->
