--- a/web/home/index.html
+++ b/web/home/index.html
@@ -95,20 +95,22 @@
                                     <span style="color: #292f33; font-weight:bold">Marvel Entertainment</span></br>
                                 </p>
                                 <p style="line-height: 0px;">
-                                    <span style="font-size: 5px;color:#8899a6;">西南民族大学</span>
+                                    <span style="color:#8899a6;">西南民族大学</span>
                                 </p>
                             </div>
                         </div>
                         <div style="float: right;width: 80px;font-size: 13px;color:#8899a6; text-align:right">
-                            <p id="ab4c" data-toggle="tooltip" data-placement="top" title="2013年9月12日 12:56">120小时</p>
+                            <p id="ab4c" data-toggle="tooltip" data-placement="top" title="2013年9月12日 12:56">120小时前</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12 col-sm-12">
-                            <p style="margin-top: 10px; word-wrap:break-word">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, illum voluptates consectetur consequatur ducimus. Necessitatibus, nobis consequatur hic eaque laborum laudantium. Adipisci, explicabo, asperiores molestias deleniti unde dolore enim quas.
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, illum voluptates consectetur consequatur ducimus. Necessitatibus, nobis consequatur hic eaque laborum laudantium. Adipisci, explicabo, asperiores molestias deleniti unde dolore enim quas.
-                            </p>
+                            <a  data-toggle="modal" data-target="#myModal" style="text-decoration:none;color: #0f0f0f">
+                                <p style="margin-top: 10px; word-wrap:break-word">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, illum voluptates consectetur consequatur ducimus. Necessitatibus, nobis consequatur hic eaque laborum laudantium. Adipisci, explicabo, asperiores molestias deleniti unde dolore enim quas.
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, illum voluptates consectetur consequatur ducimus. Necessitatibus, nobis consequatur hic eaque laborum laudantium. Adipisci, explicabo, asperiores molestias deleniti unde dolore enim quas.
+                                </p>
+                            </a>
                         </div>
                     </div>
                     <div class="row">
@@ -193,6 +195,99 @@
     </div> <!--/.masonry-container  -->
 </div>
 
+
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="https://pbs.twimg.com/media/CthYHkzXEAQw7qE.jpg" >
+                        </div>
+                        <div class="item">
+                            <img src="https://pbs.twimg.com/media/CthbTKPWAAAc0T4.jpg" >
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <div style="width: auto;height: 35px; padding-top: 20px;">
+                    <div style="width: 35px; float: left">
+                        <div id="def-html" class="box" data-tooltip="#html-content">
+                            <img src="https://pbs.twimg.com/media/CthYHkzXEAQw7qE.jpg" height="35" width="35">
+                        </div>
+                    </div>
+                    <div style="float: left;width: 200px;padding-left: 5px;">
+                        <div class="box" data-tooltip="#html-content">
+                            <p>
+                                <span style="color: #292f33; font-weight:bold">Marvel Entertainment</span></br>
+                            </p>
+                            <p style="line-height: 0px;">
+                                <span style="color:#8899a6;">西南民族大学</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div style="float: right;width: 80px;font-size: 13px;color:#8899a6; text-align:right">
+                        <p data-toggle="tooltip" data-placement="top" title="2013年9月12日 12:56">120小时前</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <p style="margin-top: 10px; word-wrap:break-word">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, illum voluptates consectetur consequatur ducimus. Necessitatibus, nobis consequatur hic eaque laborum laudantium. Adipisci, explicabo, asperiores molestias deleniti unde dolore enim quas.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, illum voluptates consectetur consequatur ducimus. Necessitatibus, nobis consequatur hic eaque laborum laudantium. Adipisci, explicabo, asperiores molestias deleniti unde dolore enim quas.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 col-sm-6">
+                        <p data-toggle="tooltip" data-placement="top" title="喜欢" style="text-align:center">
+                            <span class="glyphicon glyphicon-heart" style="color: #ff0000;"></span><span style="padding-left: 6px;">50</span>
+                        </p>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <p data-toggle="tooltip" data-placement="top" title="回复" style="text-align:center">
+                            <span class="glyphicon glyphicon-share-alt" style="color: #ff0000"></span>
+                        </p>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <p data-toggle="tooltip" data-placement="top" title="转发" style="text-align:center">
+                            <span class="glyphicon glyphicon-retweet" style="color: #ff0000"></span><span style="padding-left: 6px;">80</span>
+                        </p>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <p data-toggle="tooltip" data-placement="top" title="举报" style="text-align:center">
+                            <span class="glyphicon glyphicon-user" style="color: #ff0000"></span><span style="padding-left: 6px;">5</span>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
 
 
 </body>
